<resources>
    <string name="app_name">Cab42</string>
    <string name="milton_keynes_background">Milton Keynes Background</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Create Account</string>
    <string name="action_register2">CREATE ACCOUNT</string>
    <string name="action_sign_in2">SIGN IN</string>
    <string name="action_recover_password">FORGET PASSWORD</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="loading">Loading…</string>
    <string name="email_password_title_text">Email and Password</string>
    <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="title_activity_map">Map</string>
    <string name="permission_rationale_location">Access to the location service is required to use CAB42, which shows your current location on the map and enables create a book.</string>
    <string name="location_permission_denied">CAB42 requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'CAB42\'.</string>
    <string name="permission_required_toast">Location permission is required for CAB42.</string>

</resources>
